--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_executable(stablecoin_tracker
     src/TwitterClient.cpp
     src/BridgeClient.cpp
     src/RiskLogger.cpp
+    src/TwitterLogger.cpp
 )
 
 target_include_directories(stablecoin_tracker PRIVATE src/include)
